# hackathon-spaceship-python

./: .gitignore  README.md
.github/workflows/: main.yml
hackathon-spaceship-python/: README.md  pyproject.toml
hackathon-spaceship-python/.workflow/: deploy.yml
hackathon-spaceship-python/src/: main.py
hackathon-spaceship-python/tests/: test_filterTransported.py
