[tool.poetry]
name = "hackathon-spaceship-python"
version = "0.1.0"
description = ""
authors = ["VikaskumarPatel1595 <vikaskumar.patel1@ah.nl>","vikas1595 <vikasptl07@gmail.com>"]
readme = "README.md"
packages = [{include = "hackathon_spaceship_python"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
ipykernel = "^6.22.0"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
